--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "gatsby-image": "^2.2.39",
     "gatsby-plugin-manifest": "^2.2.39",
     "gatsby-plugin-offline": "^3.0.32",
+    "gatsby-plugin-postcss": "^2.1.20",
+    "gatsby-plugin-purgecss": "^4.0.1",
     "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-sharp": "^2.4.3",
     "gatsby-plugin-snipcart": "^1.1.2",
@@ -22,7 +24,10 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "tailwindcss": "^1.2.0",
+    "typeface-open-sans": "0.0.75",
+    "typeface-short-stack": "0.0.72"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
