--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "gatsby": "^2.19.7",
+    "gatsby-background-image": "^1.0.1",
     "gatsby-image": "^2.2.39",
     "gatsby-plugin-manifest": "^2.2.39",
     "gatsby-plugin-offline": "^3.0.32",
